some bug repair

--- a/help/html/Animation/Animation.html
+++ b/help/html/Animation/Animation.html
@@ -40,10 +40,10 @@
 				<a href="Animation.html" class="menu_spread_a_top">Animation <p id="demo"></p></a>
 				</div>
 				<ul class="menu_spread_ul">
-				    <li class="menu_spread_li02"><a href="StudioLibrary.html" class="menu_spread_a">StudioLibrary&#62;&#62;动作库</a></li>
-				    <li class="menu_spread_li02"><a href="AnimationCheck.html" class="menu_spread_a">AnimationCheckTools&#62;&#62;动画检查工具</a></li>
-					<li class="menu_spread_li02"><a href="playblast.html" class="menu_spread_a">playblastTools&#62;&#62;动画拍屏工具</a></li>
-					<li class="menu_spread_li02"><a href="FbxExport.html" class="menu_spread_a">FBXExportTools&#62;&#62;Fbx导出工具</a></li>
+				    <li class="menu_spread_li02"><a href="StudioLibrary.html" class="menu_spread_a">&#62;&#62;StudioLibrary<br>动作库</a></li>
+				    <li class="menu_spread_li02"><a href="AnimationCheck.html" class="menu_spread_a">&#62;&#62;AnimationCheckTools<br>动画检查工具</a></li>
+					<li class="menu_spread_li02"><a href="playblast.html" class="menu_spread_a">&#62;&#62;playblastTools<br>动画拍屏工具</a></li>
+					<li class="menu_spread_li02"><a href="FbxExport.html" class="menu_spread_a">&#62;&#62;FBXExportTools<br>Fbx导出工具</a></li>
 			  </ul>
 		  </li>
 			<script>
