--- a/help/html/Modeling/Modeling.html
+++ b/help/html/Modeling/Modeling.html
@@ -37,8 +37,8 @@
 				<a href="Modeling.html" class="menu_spread_a_top">Modeling <p id="demo"></p></a>
 				</div>
 				<ul class="menu_spread_ul">
-				  <li class="menu_spread_li02"><a href="Asset.html" class="menu_spread_a">AssetTools&#62;&#62;资产工具</a></li>
-				  <li class="menu_spread_li02"><a href="AssetLibrary.html" class="menu_spread_a">AssetLibrary&#62;&#62;资产库 v1.0 beta</a></li>
+				  <li class="menu_spread_li02"><a href="Asset.html" class="menu_spread_a">&#62;&#62;AssetTools<br>资产工具</a></li>
+				  <li class="menu_spread_li02"><a href="AssetLibrary.html" class="menu_spread_a">&#62;&#62;AssetLibrary<br>资产库 v1.0 beta</a></li>
 			  </ul>
 		  </li>
 			<script>
