--- a/help/html/Others/kitsuSnap.html
+++ b/help/html/Others/kitsuSnap.html
@@ -41,9 +41,9 @@
 				<a href="Others.html" class="menu_spread_a_top">Others<p id="demo"></p></a>
 			</div>
 				<ul class="menu_spread_ul">
-				  <li class="menu_spread_li02"><a href="kitsuLogin.html" class="menu_spread_a">KitsuTaskLogin&#62;&#62;Kitsu登录</a></li>
-					<li class="menu_spread_li02"><a href="kitsuManager.html" class="menu_spread_a">KitsuTaskManager&#62;&#62;Kitsu任务管理器</a></li>
-					<li class="menu_spread_li02"><a href="kitsuSnap.html" class="menu_current_item">KitsuTaskSnap&#62;&#62;Kitsu拍屏</a></li>
+				  <li class="menu_spread_li02"><a href="kitsuLogin.html" class="menu_spread_a">&#62;&#62;KitsuTaskLogin<br>Kitsu登录</a></li>
+					<li class="menu_spread_li02"><a href="kitsuManager.html" class="menu_spread_a">&#62;&#62;KitsuTaskManager<br>Kitsu任务管理器</a></li>
+					<li class="menu_spread_li02"><a href="kitsuSnap.html" class="menu_current_item">&#62;&#62;KitsuTaskSnap<br>Kitsu拍屏</a></li>
 			  </ul>
 		  </li>
 			<script>
