--- a/help/html/Rigging/Rigging.html
+++ b/help/html/Rigging/Rigging.html
@@ -39,8 +39,8 @@
 				<a href="Rigging.html" class="menu_spread_a_top">Rigging <p id="demo"></p></a>
 				</div>
 				<ul class="menu_spread_ul">
-				  <li class="menu_spread_li02"><a href="Controls.html" class="menu_spread_a">ControlsTools&#62;&#62;控制器工具</a></li>
-					<li class="menu_spread_li02"><a href="Adv.html" class="menu_spread_a">AdvancedTools&#62;&#62;Adv工具</a></li>
+				  <li class="menu_spread_li02"><a href="Controls.html" class="menu_spread_a">&#62;&#62;ControlsTools<br>控制器工具</a></li>
+					<li class="menu_spread_li02"><a href="Adv.html" class="menu_spread_a">&#62;&#62;AdvancedTools<br>Adv工具</a></li>
 			  </ul>
 		  </li>
 			<script>
