--- a/help/html_EN/Modeling/Modeling.html
+++ b/help/html_EN/Modeling/Modeling.html
@@ -38,7 +38,7 @@
 				</div>
 				<ul class="menu_spread_ul">
 				  <li class="menu_spread_li02"><a href="Asset.html" class="menu_spread_a">AssetTools</a></li>
-				  	<li class="menu_spread_li02"><a href="AssetLibrary.html" class="menu_current_item">AssetLibrary</a></li>
+				  	<li class="menu_spread_li02"><a href="AssetLibrary.html" class="menu_spread_a">AssetLibrary</a></li>
 			  </ul>
 		  </li>
 			<script>
