--- a/help/html/Tools/T_Rename.html
+++ b/help/html/Tools/T_Rename.html
@@ -36,9 +36,9 @@
 				<a href="Tools.html" class="menu_spread_a_top">Tools <p id="demo"></p></a>
 				</div>
 				<ul class="menu_spread_ul">
-				  <li class="menu_spread_li02"><a href="T_BCConstraint.html" class="menu_spread_a">BCConstraintTools&#62;&#62;约束工具</a></li>
-					<li class="menu_spread_li02"><a href="T_Rename.html" class="menu_current_item">ReNameTools&#62;&#62;重命名工具</a></li>
-					<li class="menu_spread_li02"><a href="T_Check.html" class="menu_spread_a">CheckTools&#62;&#62;资产检查工具</a></li>
+				  <li class="menu_spread_li02"><a href="T_BCConstraint.html" class="menu_spread_a">&#62;&#62;BCConstraintTools<br>约束工具</a></li>
+					<li class="menu_spread_li02"><a href="T_Rename.html" class="menu_current_item">&#62;&#62;ReNameTools<br>重命名工具</a></li>
+					<li class="menu_spread_li02"><a href="T_Check.html" class="menu_spread_a">&#62;&#62;CheckTools<br>资产检查工具</a></li>
 			  </ul>
 		  </li>
 			<script>
