--- a/help/html_EN/Animation/Animation.html
+++ b/help/html_EN/Animation/Animation.html
@@ -99,7 +99,7 @@
 				<ul class="branch_content_ul">
 				<li class="branch_content_li"><a href="StudioLibrary.html">StudioLibrary</a></li>
 				<li class="branch_content_li"><a href="AnimationCheck.html">AnimationCheck Tools</a></li>
-				<li class="branch_content_li"><a href="playblast.html">playblast Tools</a></li>
+				<li class="branch_content_li"><a href="Playblast.html">playblast Tools</a></li>
 				<li class="branch_content_li"><a href="FbxExport.html">FBX Export Tools</a></li>
 			</ul>
 			</div>
