--- a/help/html_EN/Animation/AnimationCheck.html
+++ b/help/html_EN/Animation/AnimationCheck.html
@@ -41,8 +41,8 @@
 				</div>
 				<ul class="menu_spread_ul">
 				    <li class="menu_spread_li02"><a href="StudioLibrary.html" class="menu_spread_a">StudioLibrary</a></li>
-				    <li class="menu_spread_li02"><a href="Playblast.html" class="menu_current_item">AnimationCheckTools</a></li>
-					<li class="menu_spread_li02"><a href="playblast.html" class="menu_spread_a">playblastTools</a></li>
+				    <li class="menu_spread_li02"><a href="AnimationCheck.html" class="menu_current_item">AnimationCheckTools</a></li>
+					<li class="menu_spread_li02"><a href="Playblast.html" class="menu_spread_a">playblastTools</a></li>
 					<li class="menu_spread_li02"><a href="FbxExport.html" class="menu_spread_a">FBXExportTools</a></li>
 			  </ul>
 		  </li>
