--- a/help/html_EN/Animation/StudioLibrary.html
+++ b/help/html_EN/Animation/StudioLibrary.html
@@ -96,7 +96,7 @@
 		<div class="content">
 		  <div>
 			<h1>StudioLibrary</h1>
-			<p class="_p">StudioLibrary is an animation library that allows you to add poses, animations, and so on to your projects.<img src="../../Resources/SL.webp" width="600" height="414" alt="" id="display_img"/>
+			<p class="_p">StudioLibrary is an animation library that allows you to add poses, animations, and so on to your projects.<img src="../../Resources/Animation/SL.webp" width="600" height="414" alt="" id="display_img"/>
 			  </p>
 			</div>
 			
@@ -110,7 +110,7 @@
 	</section>
 </div>
 <div id="img_page" class="img_backgroud">
-<img src="../../Resources/SL.webp" alt="" width="1410" height="962"> </div>
+<img src="../../Resources/Animation/SL.webp" alt="" width="1410" height="962"> </div>
 <script>
 	var imge=document.getElementById("display_img")
 	var text_bk=document.querySelector("text_background");
