--- a/help/html_EN/Modeling/AssetLibrary.html
+++ b/help/html_EN/Modeling/AssetLibrary.html
@@ -93,7 +93,7 @@
 		<div class="content">
 		  <div>
 			<h1>AssetLibrary</h1>
-			<p class="_p">The AssetLibrary is a new version of a library tool that contains two major modules: model assets and binding assets for the Zuru project. Each module has assets divided into characters, props, and scenes. You can right-click on the asset you want to import and select the import method. You can also submit assets through this tool<br><img src="../../Resources/Modeling/Mod_1_AssetLibrary_01.png"  width="650" height="360" alt="" id="display_img1" /><br><br>How to Use(如何使用):<br><img src="../../Resources/Modeling/Mod_1_AssetLibrary_02.png"  width="650" height="360" alt="" id="display_img2" /></p>
+			<p class="_p">The AssetLibrary is a new version of a library tool that contains two major modules: model assets and binding assets for the Zuru project. Each module has assets divided into characters, props, and scenes. You can right-click on the asset you want to import and select the import method. You can also submit assets through this tool<br>Interface description:<br><img src="../../Resources/Modeling/Mod_1_AssetLibrary_01.png"  width="650" height="360" alt="" id="display_img1" /><br><br>How to Use:<br><img src="../../Resources/Modeling/Mod_1_AssetLibrary_02.png"  width="650" height="360" alt="" id="display_img2" /></p>
 		  </div>
 		</div>
 		<footer>
