--- a/help/html_EN/Others/kitsuManager.html
+++ b/help/html_EN/Others/kitsuManager.html
@@ -95,7 +95,7 @@
 		<div class="content">
 		  <div>
 			<h1>KitsuTaskManager</h1>
-			<p>KitsuTaskManager is actually the task manager for Kitsu. After logging in, you can view your task-related information and submit files with this tool.<br><br><img src="../../Resources/EN_KS62_Task.webp" width="650" height="562" alt="" id="display_img"/>
+			<p>KitsuTaskManager is actually the task manager for Kitsu. After logging in, you can view your task-related information and submit files with this tool.<br><br><img src="../../Resources/Others/EN_KS62_Task.webp" width="650" height="562" alt="" id="display_img"/>
 			  </p>
 			</div>
 		</div>
@@ -108,7 +108,7 @@
 	</section>
 </div>
 <div id="img_page" class="img_backgroud">
-<img src="../../Resources/EN_KS62_Task.webp" alt="" width="1404" height="900"> </div>
+<img src="../../Resources/Others/EN_KS62_Task.webp" alt="" width="1404" height="900"> </div>
 <script>
 	var imge=document.getElementById("display_img")
 	var text_bk=document.querySelector("text_background");
