--- a/help/html_EN/Rigging/Adv.html
+++ b/help/html_EN/Rigging/Adv.html
@@ -94,7 +94,7 @@
 			<div class="content">
 			<div>
 			<h1>AdvancedTools</h1>
-			<p class="_p">AdvTools can call out the AdvancedSkeleton system, making your rigging process more convenient and efficient.<br><br><img src="../../Resources/ADV.webp" alt="" width="400" height="796" class="center_img" id="display_img"/></p>
+			<p class="_p">AdvTools can call out the AdvancedSkeleton system, making your rigging process more convenient and efficient.<br><br><img src="../../Resources/Rigging/ADV.webp" alt="" width="400" height="796" class="center_img" id="display_img"/></p>
 			</div>
 			
 		</div>
@@ -107,7 +107,7 @@
 	</section>
 </div>
 <div id="img_page" class="img_backgroud">
-<img src="../../Resources/ADV.webp" alt="" width="500" height="997"> </div>
+<img src="../../Resources/Rigging/ADV.webp" alt="" width="500" height="997"> </div>
 <script>
 	var imge=document.getElementById("display_img")
 	var text_bk=document.querySelector("text_background");
