--- a/help/html/Animation/AnimationCheck.html
+++ b/help/html/Animation/AnimationCheck.html
@@ -42,7 +42,7 @@
 				<ul class="menu_spread_ul">
 				    <li class="menu_spread_li02"><a href="StudioLibrary.html" class="menu_spread_a">&#62;&#62;StudioLibrary<br>动作库</a></li>
 				    <li class="menu_spread_li02"><a href="AnimationCheck.html" class="menu_current_item">&#62;&#62;AnimationCheckTools<br>动画检查工具</a></li>
-					<li class="menu_spread_li02"><a href="playblast.html" class="menu_spread_a">&#62;&#62;playblastTools<br>动画拍屏工具</a></li>
+					<li class="menu_spread_li02"><a href="Playblast.html" class="menu_spread_a">&#62;&#62;playblastTools<br>动画拍屏工具</a></li>
 					<li class="menu_spread_li02"><a href="FbxExport.html" class="menu_spread_a">&#62;&#62;FBXExportTools<br>Fbx导出工具</a></li>
 			  </ul>
 		  </li>
