--- a/help/html/Animation/FbxExport.html
+++ b/help/html/Animation/FbxExport.html
@@ -42,7 +42,7 @@
 				<ul class="menu_spread_ul">
 				    <li class="menu_spread_li02"><a href="StudioLibrary.html" class="menu_spread_a">&#62;&#62;StudioLibrary<br>动作库</a></li>
 				    <li class="menu_spread_li02"><a href="AnimationCheck.html" class="menu_spread_a">&#62;&#62;AnimationCheckTools<br>动画检查工具</a></li>
-					<li class="menu_spread_li02"><a href="playblast.html" class="menu_spread_a">&#62;&#62;playblastTools<br>动画拍屏工具</a></li>
+					<li class="menu_spread_li02"><a href="Playblast.html" class="menu_spread_a">&#62;&#62;playblastTools<br>动画拍屏工具</a></li>
 					<li class="menu_spread_li02"><a href="FbxExport.html" class="menu_current_item">&#62;&#62;FBXExportTools<br>Fbx导出工具</a></li>
 			  </ul>
 		  </li>
@@ -97,7 +97,7 @@
 		  <div>
 			<h1>FbxExportTools</h1>
 			<p>FbxExportTools（FBX导出工具）让您快速编辑地导出fbx文件。您首先需要保存文件，选择需要导出的引用文件和摄像机，它会在该文件目录下新建一个文件夹来保存fbx文件。<br><br>
-				<img src="../../Resources/AN_43.webp" width="650" height="356" alt="" id="display_img"/>
+				<img src="../../Resources/Animation/AN_43.webp" width="650" height="356" alt="" id="display_img"/>
 			  </p>
 			</div>
 			
@@ -111,7 +111,7 @@
 	</section>
 </div>
 <div id="img_page" class="img_backgroud">
-	<img src="../../Resources/AN_43.webp" alt="" width="1957" height="1080"> </div>
+	<img src="../../Resources/Animation/AN_43.webp" alt="" width="1957" height="1080"> </div>
 <script>
 	var imge=document.getElementById("display_img")
 	var text_bk=document.querySelector("text_background");
