--- a/help/html/Animation/StudioLibrary.html
+++ b/help/html/Animation/StudioLibrary.html
@@ -42,7 +42,7 @@
 				<ul class="menu_spread_ul">
 				    <li class="menu_spread_li02"><a href="StudioLibrary.html" class="menu_current_item">&#62;&#62;StudioLibrary<br>动作库</a></li>
 				    <li class="menu_spread_li02"><a href="AnimationCheck.html" class="menu_spread_a">&#62;&#62;AnimationCheckTools<br>动画检查工具</a></li>
-					<li class="menu_spread_li02"><a href="playblast.html" class="menu_spread_a">&#62;&#62;playblastTools<br>动画拍屏工具</a></li>
+					<li class="menu_spread_li02"><a href="Playblast.html" class="menu_spread_a">&#62;&#62;playblastTools<br>动画拍屏工具</a></li>
 					<li class="menu_spread_li02"><a href="FbxExport.html" class="menu_spread_a">&#62;&#62;FBXExportTools<br>Fbx导出工具</a></li>
 			  </ul>
 		  </li>
@@ -97,7 +97,7 @@
 		  <div>
 			<h1>StudioLibrary</h1>
 			<p class="_p">StudioLibrary是动作库,你可以使用它来添加pose、添加动画等。
-				<img src="../../Resources/SL.webp" width="600" height="414" alt="" id="display_img"/>
+				<img src="../../Resources/Animation/SL.webp" width="600" height="414" alt="" id="display_img"/>
 			  </p>
 			</div>
 			
@@ -111,7 +111,7 @@
 	</section>
 </div>
 <div id="img_page" class="img_backgroud">
-	<img src="../../Resources/SL.webp" alt="" width="1410" height="962"> </div>
+	<img src="../../Resources/Animation/SL.webp" alt="" width="1410" height="962"> </div>
 <script>
 	var imge=document.getElementById("display_img")
 	var text_bk=document.querySelector("text_background");
