--- a/help/html/Others/kitsuManager.html
+++ b/help/html/Others/kitsuManager.html
@@ -96,7 +96,7 @@
 		  <div>
 			<h1>KitsuTaskManager</h1>
 			<p>KitsuTaskManager是kitsu的任务管理器，登录后您可以在此查看您的任务等相关信息，也可以在此提交文件<br><br>
-				<img src="../../Resources/KS62_Task.webp" width="650" height="412" alt="" id="display_img"/>
+				<img src="../../Resources/Others/KS62_Task.webp" width="650" height="412" alt="" id="display_img"/>
 			  </p>
 			</div>
 		</div>
@@ -109,7 +109,7 @@
 	</section>
 </div>
 <div id="img_page" class="img_backgroud">
-	<img src="../../Resources/KS62_Task.webp" alt="" width="1755" height="1100"> </div>
+	<img src="../../Resources/Others/KS62_Task.webp" alt="" width="1755" height="1100"> </div>
 <script>
 	var imge=document.getElementById("display_img")
 	var text_bk=document.querySelector("text_background");
