--- a/help/html/Rigging/Adv.html
+++ b/help/html/Rigging/Adv.html
@@ -94,7 +94,7 @@
 			<div class="content">
 			<div>
 			<h1>AdvancedTools</h1>
-			<p class="_p">AdvTools可以调出AdvancedSkelecton绑定系统，使您的绑定过程更方便快捷<br><br><img src="../../Resources/ADV.webp" alt="" width="288" height="573" class="center_img" id="display_img"/></p>
+			<p class="_p">AdvTools可以调出AdvancedSkelecton绑定系统，使您的绑定过程更方便快捷<br><br><img src="../../Resources/Rigging/ADV.webp" alt="" width="288" height="573" class="center_img" id="display_img"/></p>
 			</div>
 			
 		</div>
@@ -107,7 +107,7 @@
 	</section>
 </div>
 <div id="img_page" class="img_backgroud">
-	<img src="../../Resources/ADV.webp" alt="" width="504" height="1000"> </div>
+	<img src="../../Resources/Rigging/ADV.webp" alt="" width="504" height="1000"> </div>
 <script>
 	var imge=document.getElementById("display_img")
 	var text_bk=document.querySelector("text_background");
