--- a/help/html_EN/index.html
+++ b/help/html_EN/index.html
@@ -81,7 +81,7 @@
 			  <ul class="doc_content_ul_02">
 			  	<li class="doc_content_li_02"><a href="Animation/StudioLibrary.html">StudioLibrary</a></li>
 			  	<li class="doc_content_li_02"><a href="Animation/AnimationCheck.html">AnimationCheck Tools</a></li>
-			  	<li class="doc_content_li_02"><a href="Animation/playblast.html">playblast Tools</a></li>
+			  	<li class="doc_content_li_02"><a href="Animation/Playblast.html">playblast Tools</a></li>
 			  	<li class="doc_content_li_02"><a href="Animation/FbxExport.html">FBX Export Tools</a></li>
 			  </ul>
 		    </li>
