--- a/help/html/Animation/Animation.html
+++ b/help/html/Animation/Animation.html
@@ -99,7 +99,7 @@
 				<ul class="branch_content_ul">
 				<li class="branch_content_li"><a href="StudioLibrary.html">StudioLibrary&#62;&#62;动作库</a></li>
 				<li class="branch_content_li"><a href="AnimationCheck.html">AnimationCheck Tools&#62;&#62;动画检查工具</a></li>
-				<li class="branch_content_li"><a href="playblast.html">playblast Tools&#62;&#62;动画拍屏工具</a></li>
+				<li class="branch_content_li"><a href="Playblast.html">playblast Tools&#62;&#62;动画拍屏工具</a></li>
 				<li class="branch_content_li"><a href="FbxExport.html">FBX Export Tools&#62;&#62;Fbx导出工具</a></li>
 			</ul>
 			</div>
