--- a/help/html/index.html
+++ b/help/html/index.html
@@ -81,7 +81,7 @@
 			  <ul class="doc_content_ul_02">
 			  	<li class="doc_content_li_02"><a href="Animation/StudioLibrary.html">StudioLibrary&#62;&#62;动作库</a></li>
 			  	<li class="doc_content_li_02"><a href="Animation/AnimationCheck.html">AnimationCheck Tools&#62;&#62;动画检查工具</a></li>
-			  	<li class="doc_content_li_02"><a href="Animation/playblast.html">Playblast Tools&#62;&#62;动画拍屏工具</a></li>
+			  	<li class="doc_content_li_02"><a href="Animation/Playblast.html">Playblast Tools&#62;&#62;动画拍屏工具</a></li>
 			  	<li class="doc_content_li_02"><a href="Animation/FbxExport.html">FBX Export Tools&#62;&#62;Fbx导出工具</a></li>
 			  </ul>
 		    </li>
