--- a/help/html/Animation/AnimationCheck.html
+++ b/help/html/Animation/AnimationCheck.html
@@ -44,6 +44,7 @@
 				    <li class="menu_spread_li02"><a href="AnimationCheck.html" class="menu_current_item">&#62;&#62;AnimationCheckTools<br>动画检查工具</a></li>
 					<li class="menu_spread_li02"><a href="Playblast.html" class="menu_spread_a">&#62;&#62;playblastTools<br>动画拍屏工具</a></li>
 					<li class="menu_spread_li02"><a href="FbxExport.html" class="menu_spread_a">&#62;&#62;FBXExportTools<br>Fbx导出工具</a></li>
+					<li class="menu_spread_li02"><a href="abcExport.html" class="menu_spread_a">&#62;&#62;AbcExportTools<br>ABC导出工具</a></li>
 			  </ul>
 		  </li>
 			<script>
@@ -96,7 +97,7 @@
 		<div class="content">
 			<div>
 			<h1>AnimationCheckTools</h1>
-			<p>AnimationCheckTools(动画检查工具)是一键检查动画文件是否存在问题的工具，没有UI。主要的检查项包括是否存在相机、是否存在没有加载的参考文件、是否锁定相机。也会为动画文件添加首帧、移除没用的层以及清楚未知的节点。</p>
+			<p class="_p">AnimationCheckTools(动画检查工具)是一键检查动画文件是否存在问题的工具，没有UI。主要的检查项包括是否存在相机、是否存在没有加载的参考文件、是否锁定相机。也会为动画文件添加首帧、移除没用的层以及清楚未知的节点。</p>
 			</div>
 			
 		</div>
