--- a/help/html/Rigging/Controls.html
+++ b/help/html/Rigging/Controls.html
@@ -95,7 +95,7 @@
 			<div>
 			<h1>ControlTools</h1>
 			<p class="_p">ControlTools（控制器工具）可以帮助绑定师生成控制器、替换控制器、修改控制器颜色等等。
-				<br><br><img src="../../Resources/Rigging/CT.webp" width="600" height="230" alt="" id="display_img"/>
+				<br><br><img src="../../Resources/Rigging/Rig_ControlTools_01.webp" width="600" height="230" alt="" id="display_img"/>
 				</p>
 			</div>
 		</div>
@@ -108,7 +108,7 @@
 	</section>
 </div>
 <div id="img_page" class="img_backgroud">
-<img src="../../Resources/Rigging/CT.webp" alt="" width="2065" height="800"> </div>
+<img src="../../Resources/Rigging/Rig_ControlTools_01.webp" alt="" width="1267" height="490"> </div>
 <script>
 	var imge=document.getElementById("display_img")
 	var text_bk=document.querySelector("text_background");
