--- a/help/html/Tools/T_Rename.html
+++ b/help/html/Tools/T_Rename.html
@@ -94,7 +94,7 @@
 			<div>
 			<h1>RenameTools</h1>
 			<p class="_p">RenameTools(重命名工具)具有批量修改maya内物体的名称、给名称增加前后缀、选择添加固定后缀以及修改首字母为大写等等功能。<br><br>
-				<img src="../../Resources/Tools/RN.webp" alt="" width="600" height="338" id="display_img"/>
+				<img src="../../Resources/Tools/Tools_RenameTools_01.webp" alt="" width="600" height="355" id="display_img"/>
 				 </p>
 			</div>
 		</div>
@@ -107,7 +107,7 @@
 	</section>
 </div>
 <div id="img_page" class="img_backgroud">
-	<img src="../../Resources/Tools/RN.webp" alt="" width="1959" height="1091"> </div>
+	<img src="../../Resources/Tools/Tools_RenameTools_01.webp" alt="" width="827" height="486"> </div>
 <script>
 	var imge=document.getElementById("display_img")
 	var text_bk=document.querySelector("text_background");
