--- a/help/html_EN/Animation/AnimationCheck.html
+++ b/help/html_EN/Animation/AnimationCheck.html
@@ -44,6 +44,7 @@
 				    <li class="menu_spread_li02"><a href="AnimationCheck.html" class="menu_current_item">AnimationCheckTools</a></li>
 					<li class="menu_spread_li02"><a href="Playblast.html" class="menu_spread_a">playblastTools</a></li>
 					<li class="menu_spread_li02"><a href="FbxExport.html" class="menu_spread_a">FBXExportTools</a></li>
+					<li class="menu_spread_li02"><a href="abcExport.html" class="menu_spread_a">AbcExportTools</a></li>
 			  </ul>
 		  </li>
 			<script>
