--- a/help/html_EN/Rigging/Controls.html
+++ b/help/html_EN/Rigging/Controls.html
@@ -95,7 +95,7 @@
 			<div>
 			<h1>ControlTools</h1>
 			<p class="_p">ControlTools is a tool that helps riggers generate controllers, replace controllers, modify controller colors, etc.
-				<br><br><img src="../../Resources/Rigging/EN_CT.webp" width="600" height="230" alt="" id="display_img"/>
+				<br><br><img src="../../Resources/Rigging/Rig_ControlTools_01_EN.webp" width="650" height="248" alt="" id="display_img"/>
 				</p>
 			</div>
 		</div>
@@ -107,8 +107,7 @@
 		</div>
 	</section>
 </div>
-<div id="img_page" class="img_backgroud">
-<img src="../../Resources/Rigging/EN_CT.webp" alt="" width="1725" height="653"> </div>
+<div id="img_page" class="img_backgroud"><img src="../../Resources/Rigging/Rig_ControlTools_01_EN.webp" alt="" width="1725" height="653"></div>
 <script>
 	var imge=document.getElementById("display_img")
 	var text_bk=document.querySelector("text_background");
