--- a/help/html_EN/Tools/T_BCConstraint.html
+++ b/help/html_EN/Tools/T_BCConstraint.html
@@ -94,7 +94,7 @@
 			<div>
 			<h1>BCConstraintTools</h1>
 			<p class="_p">BCConstraintTools is a collection of constraint methods in Maya, which can contraint objects to object or objects to objects by selecting the constraint method using radio buttons, you can load the target object by clicking the button on the left, and constrained object by clicking the button on the right. Check the checkbox to select the constraint type, which will constrain all transform attributes of the constrained object. Click the "Reset" button to uncheck all checkboxes.<br><br>
-				<img src="../../Resources/Tools/EN_BBC.webp" width="600" height="338" alt="" id="display_img"/>
+				<img src="../../Resources/Tools/Tools_BBConstraint_01_EN.webp" width="650" height="360" alt="" id="display_img"/>
 				 </p>
 			</div>
 		</div>
@@ -107,7 +107,7 @@
 	</section>
 </div>
 <div id="img_page" class="img_backgroud">
-<img src="../../Resources/Tools/EN_BBC.webp" alt="" width="1606" height="900"> </div>
+<img src="../../Resources/Tools/Tools_BBConstraint_01_EN.webp" alt="" width="1600" height="895"> </div>
 <script>
 	var imge=document.getElementById("display_img")
 	var text_bk=document.querySelector("text_background");
