--- a/help/html_EN/Tools/T_Rename.html
+++ b/help/html_EN/Tools/T_Rename.html
@@ -94,7 +94,7 @@
 			<div>
 			<h1>RenameTools</h1>
 			<p class="_p">The RenameTools allow for batch renaming of objects in Maya, adding prefixes and suffixes to objects' name,adding fixed suffixes, and uppercasing the first letter,etc.<br><br>
-				<img src="../../Resources/Tools/EN_RN.webp" width="600" height="338" alt="" id="display_img"/>
+				<img src="../../Resources/Tools/Tools_RenameTools_01_EN.webp" width="600" height="350" alt="" id="display_img"/>
 				 </p>
 			</div>
 		</div>
@@ -107,7 +107,7 @@
 	</section>
 </div>
 <div id="img_page" class="img_backgroud">
-<img src="../../Resources/Tools/EN_RN.webp" alt="" width="1552" height="900"> </div>
+<img src="../../Resources/Tools/Tools_RenameTools_01_EN.webp" alt="" width="1032" height="600"> </div>
 <script>
 	var imge=document.getElementById("display_img")
 	var text_bk=document.querySelector("text_background");
