--- a/help/html_EN/index.html
+++ b/help/html_EN/index.html
@@ -83,6 +83,7 @@
 			  	<li class="doc_content_li_02"><a href="Animation/AnimationCheck.html">AnimationCheck Tools</a></li>
 			  	<li class="doc_content_li_02"><a href="Animation/Playblast.html">playblast Tools</a></li>
 			  	<li class="doc_content_li_02"><a href="Animation/FbxExport.html">FBX Export Tools</a></li>
+				  <li class="doc_content_li_02"><a href="Animation/abcExport.html">Abc Export Tools</a></li>
 			  </ul>
 		    </li>
 		  	<li class="doc_content_li_01"><a href="Others/Others.html">Others</a>
