--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
 			  	<li class="doc_content_li_02"><a href="help/html/Animation/AnimationCheck.html">AnimationCheck Tools&#62;&#62;动画检查工具</a></li>
 			  	<li class="doc_content_li_02"><a href="help/html/Animation/Playblast.html">playblast Tools&#62;&#62;动画拍屏工具</a></li>
 			  	<li class="doc_content_li_02"><a href="help/html/Animation/FbxExport.html">FBX Export Tools&#62;&#62;Fbx导出工具</a></li>
+				<li class="doc_content_li_02"><a href="help/html/Animation/abcExport.html">Abc Export Tools&#62;&#62;ABC导出工具</a></li>
 			  </ul>
 		    </li>
 		  	<li class="doc_content_li_01"><a href="help/html/Others/Others.html">Others</a>
