--- a/help/html/Animation/Animation.html
+++ b/help/html/Animation/Animation.html
@@ -44,6 +44,7 @@
 				    <li class="menu_spread_li02"><a href="AnimationCheck.html" class="menu_spread_a">&#62;&#62;AnimationCheckTools<br>动画检查工具</a></li>
 					<li class="menu_spread_li02"><a href="Playblast.html" class="menu_spread_a">&#62;&#62;playblastTools<br>动画拍屏工具</a></li>
 					<li class="menu_spread_li02"><a href="FbxExport.html" class="menu_spread_a">&#62;&#62;FBXExportTools<br>Fbx导出工具</a></li>
+					<li class="menu_spread_li02"><a href="abcExport.html" class="menu_spread_a">&#62;&#62;AbcExportTools<br>ABC导出工具</a></li>
 			  </ul>
 		  </li>
 			<script>
@@ -101,6 +102,7 @@
 				<li class="branch_content_li"><a href="AnimationCheck.html">AnimationCheck Tools&#62;&#62;动画检查工具</a></li>
 				<li class="branch_content_li"><a href="Playblast.html">playblast Tools&#62;&#62;动画拍屏工具</a></li>
 				<li class="branch_content_li"><a href="FbxExport.html">FBX Export Tools&#62;&#62;Fbx导出工具</a></li>
+				<li class="branch_content_li"><a href="abcExport.html">Abc Export Tools&#62;&#62;Abc导出工具</a></li>
 			</ul>
 			</div>
 			
