--- a/help/html/Tools/T_BCConstraint.html
+++ b/help/html/Tools/T_BCConstraint.html
@@ -93,7 +93,7 @@
 			<div>
 			<h1>BCConstraintTools</h1>
 			<p class="_p">BCConstraintTools(约束工具)集合了maya中约束方法，可以对物体进行但对多约束以及多对多约束。通过单选框选择约束方式（单对多或者多对多）点击左边的按钮加载约束物体，点击右边的按钮加载被约束物体。勾选复选框选择约束类型，这将会约束被约束物体所有的transform属性，点击Reset按钮将复选框重置为未勾选状态。<br><br>
-				<img src="../../Resources/Tools/BBC.webp" alt="" width="600" height="338" id="display_img">
+				<img src="../../Resources/Tools/Tools_BBConstraint_01.webp" alt="" width="600" height="338" id="display_img">
 			  </p>
 			</div>
 		</div>
@@ -107,7 +107,7 @@
 	</section>
 </div>
 <div id="img_page" class="img_backgroud">
-<img src="../../Resources/Tools/BBC.webp" alt="" width="1959" height="1091"> </div>
+<img src="../../Resources/Tools/Tools_BBConstraint_01.webp" alt="" width="1500" height="840"> </div>
 <script>
 	var imge=document.getElementById("display_img")
 	var text_bk=document.querySelector("text_background");
